fixing align items center

--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ body, html {
 @media (min-width: 951px) {
   .text-with-big-image-container {
     justify-content: space-between;
+    align-items: center;
     /* flex-wrap: nowrap; */
   }
 }
@@ -483,6 +484,7 @@ body, html {
   display: flex;
   flex-wrap: wrap;
   margin: 70px auto;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -625,6 +627,7 @@ body, html {
   .text-with-video-container {
     /* justify-content: space-between; */
     flex-wrap: nowrap;
+    align-items: center;
   }
 }
 
@@ -694,16 +697,6 @@ body, html {
     width: 375px;
     height: auto;
   }
-}
-
-.text-with-video-container .video-container:after {
-  border-bottom: 10px solid #75cdc8;
-  content: ' ';
-  position: absolute;
-  width: 100%;
-  z-index: -1;
-  right: 50%;
-  bottom: 33%;
 }
 
 .text-with-video-container .video-container .placeholder {
